# better-battlebit-api

./: Cargo.toml  LICENSE.txt  README.md  Rocket.toml
src/: error.rs  main.rs
src/api/: mod.rs
src/api/leaderboards/: mod.rs  responses.rs
src/api/serverlist/: mod.rs  response.rs
src/static/: index.html
static/: index.html
