[package]
name = "better-battlebit-api"
version = "0.1.0"
authors = ["Superyu1337 <development@superyu.xyz>"]
edition = "2021"
homepage = "https://bbb.superyu.xyz"
readme = "README.md"
description = "A better API for Battlebit"
license-file = "LICENSE.txt"

[dependencies]
battlebit-api = { version = "0.2.0", features = ["async", "utoipa"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
utoipa = { version = "4.2.0", features = ["rocket_extras"] }
utoipa-rapidoc = { version = "3.0.0", features = ["rocket"] }
utoipa-redoc = { version = "3.0.0", features = ["rocket"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["rocket"] }
